# file_cmp

./: Cargo.toml  README.md  benchmark.sh  clean.cmd  clean.sh  testnot.txt  tesx.txt
.github/workflows/: build.yml  ci.yml  release.yml  rust.yml
src/: lib.rs  main.rs  tests.rs
tests/: integration_test.rs  test_compare.rs
tests/testfiles/: west.txt
