[package]
name = "file_cmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
